fixed broken ui-button

--- a/src/slicked/slick-styles.scss
+++ b/src/slicked/slick-styles.scss
@@ -1,27 +1,5 @@
 @import "../styles/colors";
 
-.baby {
-	display: flex;
-	color: $jack-white;
-	background-color: $betty-blue;
-	text-align: center;
-	justify-content: center;
-	padding: {
-		top: 100px;
-		bottom: 100px;
-	};
-}
-
-.bobby {
-	color: $jack-white;
-	background-color: $jack-black;
-	text-align: center;
-	padding: {
-		top: 50px;
-		bottom: 50px;
-	};
-}
-
 .slick-slider {
 	position: relative;
 
